--- a/src/client/layout/style.scss
+++ b/src/client/layout/style.scss
@@ -8,6 +8,9 @@
 
 .quillbooking-layout {
 	font-size: 13px;
+	display: flex;
+	min-height: 100vh;
+	width: 100%;
 }
 
 #wpwrap {
@@ -26,6 +29,7 @@ div#wpcontent {
 .quillbooking-layout__main {
 	display: flex;
 	box-sizing: border-box;
+	width: 100%;
 	.quillbooking-page-component-wrapper {
 		width: 100%;
 		position: relative;
@@ -63,6 +67,7 @@ div#wpcontent {
 html {
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
+	height: 100%;
 }
 
 img {
@@ -72,6 +77,7 @@ img {
 body {
 	font-family: "Inter", sans-serif;
 	color: #9b9ca7;
+	height: 100%;
 }
 
 input{
@@ -94,4 +100,8 @@ input{
 .quillbooking-tab-title{
 	margin: 0;
 	margin-bottom: 20px;
+}
+
+#wpbody-content{
+	padding-bottom: 0px;
 }
