--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -1,3 +1,69 @@
 .quillbooking-navbar {
-  width: 100%;
+  width: 265px;
+  height: 100%;
+
+  h1 {
+    font-weight: 600;
+    font-size: 18px;
+    color: #3F4254;
+  }
+
+.custom-menu{
+    width: 265px;
+    height: 100%;
+    padding: 10px 20px;
+    position: relative;
+}
+
+.group{
+    margin-top: 30px;
+}
+
+  .custom-menu .ant-menu-item {
+    background: transparent ; 
+    transition: background 0.3s ease-in-out;
+    margin-bottom: 12px;
+}
+
+.custom-menu .ant-menu-item:hover,
+.custom-menu .ant-menu-item-selected {
+    background: #953AE4 !important;
+}
+
+.custom-menu .ant-menu-item:hover span,
+.custom-menu .ant-menu-item-selected span {
+    color: white !important;
+}
+
+.custom-menu .ant-menu-item:hover svg,
+.custom-menu .ant-menu-item-selected svg {
+    fill: white !important;
+}
+
+.custom-menu .ant-menu-item:last-child{
+    padding-right: 0px;
+}
+
+.custom-menu .ant-menu-item[data-key="button-item"] a {
+    background-color: #B7F005 !important;
+    color: #292D32 !important; 
+    font-size: 16px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    padding: 10px 16px;
+    width: 100%;
+    text-decoration: none;
+}
+
+.custom-menu .ant-menu-item[data-key="button-item"]:hover {
+    background: transparent !important;
+}
+
+.custom-menu .ant-menu-item[data-key="button-item"]:hover a,
+.custom-menu .ant-menu-item[data-key="button-item"].ant-menu-item-selected a {
+    background-color: #B7F005 !important;
+    color: #292D32 !important;
+}
 }
