some edits in event details and event advanced settings

--- a/src/client/pages/event/tabs/payments/style.scss
+++ b/src/client/pages/event/tabs/payments/style.scss
@@ -18,17 +18,17 @@
 }
 
 .paypal-img{
-    width: 107px;
-    height: 100px;
-    margin-top: 5px;
-    margin-left: 10px;
+    width: 5rem;
+    height: 2rem;
+    margin-top: 10px;
+    margin-left: 5px;
 }
 
 .stripe-img{
-    width: 107px;
-    height: 40px;
-    margin-top: 35px;
-    margin-left: 10px;
+    width: 5rem;
+    height: 2rem;
+    margin-top: 7px;
+    margin-left: 5px;
 }
 
 .custom-check .ant-checkbox .ant-checkbox-inner{
