Add ScheduleComponent for managing weekly availability with time pickers

--- a/src/client/pages/event/tabs/availability/sections/availability/style.scss
+++ b/src/client/pages/event/tabs/availability/sections/availability/style.scss
@@ -6,3 +6,7 @@
 .custom-timepicker.ant-picker-disabled .ant-picker-input input {
     color: #9BA7B7 !important; /* Optional: Change text color */
 }
+
+.custom-timepicker input {
+    text-align: right;
+}
