--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 	width: 100%;
 	max-width: 856px;
 	margin: 0 auto;
+	margin-top: 2em;
 }
 
 .confirmation-details-container {
@@ -20,12 +21,18 @@
 	border: 1.05px solid #3333331f;
 }
 
+.profile-picture {
+	text-align: center;
+}
+
 .profile-picture img {
-	display: block;
-	margin: 0 auto;
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+}
+
+.confirmation-icon {
+	text-align: center;
+	margin-bottom: 1rem;
 }
 
 .confirmation-title {
@@ -59,8 +66,12 @@
 }
 
 .booking-card p {
+	display: flex;
+  gap: 10px;
+	align-items: center;
 	font-weight: 400;
 	font-size: 16px;
+	margin: 10px 0;
 }
 
 .calendar-buttons {
@@ -101,12 +112,14 @@
 	font-weight: 700;
 	font-size: 16px;
 	color: #ef4444;
+	text-decoration: none;
 }
 
 .reschedule-link {
 	font-weight: 700;
 	font-size: 16px;
 	color: #0b69c7;
+	text-decoration: none;
 }
 
 .cancellation-policy {
@@ -118,12 +131,41 @@
 .cancellation-policy h3 {
 	font-weight: 700;
 	font-size: 16px;
-	margin: 1em 0;
+	margin: 10px 0 5px 0;
 }
 
-h3 {
-	color: red;
-	background-color: #0b69c7;
-	font-size: 500px;
-	text-transform: uppercase;
+.cancelation-input-container {
+	width: 100%;
+	text-align: center;
+	font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+  color: #737373;
+  padding: 10px 0;
+}
+
+.cancelation-input-container textarea {
+	width: 100%;
+	height: 100px;
+	border-radius: 8px;
+	border: 1px solid #eaeaea;
+	padding: 10px;
+}
+
+.cancel-btn {
+	cursor: pointer;
+	color: #FFFFFF;
+	font-weight: 400;
+	font-size: 14px;
+	border-radius: 100px;
+	border: none;
+	padding: 12px 24px;
+	background-color: #953AE4;
+}
+
+.calendar-buttons-container {
+	display: flex;
+	gap: 10px;
+	justify-content: flex-end;
+	margin-top: 1rem;
 }
