feat: Add location handling to EventDetails component and update styles for better layout

--- a/src/renderer/components/event-card/card-body/event-details/style.scss
+++ b/src/renderer/components/event-card/card-body/event-details/style.scss
@@ -19,12 +19,13 @@
 	padding: 10px 0;
 }
 
-.event-duration {
+.detail-row {
 	display: flex;
 	align-items: center;
 	gap: 10px;
 	font-weight: 400;
 	font-size: 16px;
+	text-transform: capitalize;
 }
 
 .event-description {
