--- a/src/client/pages/event/tabs/payments/style.scss
+++ b/src/client/pages/event/tabs/payments/style.scss
@@ -1,43 +1,48 @@
 .custom-switch.ant-switch-checked {
-    background-color: #953AE4;
+	background-color: #953ae4;
 }
 
-.custom-radio .ant-radio .ant-radio-inner{
-    background-color: #E1E3EA;
-    border-color: #E1E3EA;
+.custom-radio {
+	display: flex;
+	align-items: center;
+}
+
+.custom-radio .ant-radio .ant-radio-inner {
+	background-color: #e1e3ea;
+	border-color: #e1e3ea;
 }
 
 .custom-radio .ant-radio-checked .ant-radio-inner {
-    background-color: #953AE4 !important;
-    border-color: #953AE4 !important; 
+	background-color: #953ae4 !important;
+	border-color: #953ae4 !important;
 }
 
 /* Change inner dot color */
 .custom-radio .ant-radio-checked .ant-radio-inner::after {
-    background-color: white !important; 
+	background-color: white !important;
 }
 
-.paypal-img{
-    width: 5rem;
-    height: 2rem;
-    margin-top: 10px;
-    margin-left: 5px;
+.paypal-img {
+	width: 5rem;
+	height: 2rem;
+	margin-top: 10px;
+	margin-left: 5px;
 }
 
-.stripe-img{
-    width: 5rem;
-    height: 2rem;
-    margin-top: 7px;
-    margin-left: 5px;
+.stripe-img {
+	width: 5rem;
+	height: 2rem;
+	margin-top: 7px;
+	margin-left: 5px;
 }
 
-.custom-check .ant-checkbox .ant-checkbox-inner{
-    background-color: #E1E3EA;
-    border-color: #E1E3EA;
-    width: 16px;
-    height: 16px;
+.custom-check .ant-checkbox .ant-checkbox-inner {
+	background-color: #e1e3ea;
+	border-color: #e1e3ea;
+	width: 16px;
+	height: 16px;
 }
 
-.custom-check .ant-checkbox-checked .ant-checkbox-inner{
-    background-color: #953AE4;
+.custom-check .ant-checkbox-checked .ant-checkbox-inner {
+	background-color: #953ae4;
 }
