--- a/src/renderer/components/event-card/card-body/event-details/style.scss
+++ b/src/renderer/components/event-card/card-body/event-details/style.scss
@@ -4,9 +4,8 @@
 }
 
 .event-details-container {
-  padding-bottom: 20px;
+	padding-bottom: 20px;
 	border-bottom: 1px solid #ededed;
-
 }
 
 .event-header {
@@ -35,21 +34,30 @@
 }
 
 .event-duration-multi {
-  display: flex;
-  gap: 0.5rem;
+	display: flex;
+	gap: 0.5rem;
 }
 
 .duration-btn {
-  padding: 0.25rem 1rem;
-  border-radius: 50px;
-  border: none;
-  background-color: rgba(168, 85, 247, 0.15);
-  color: #9333ea;
-  font-size: 0.875rem;
-  cursor: pointer;
+	padding: 0.25rem 1rem;
+	border-radius: 50px;
+	border: none;
+	background-color: rgba(168, 85, 247, 0.15);
+	color: #9333ea;
+	font-size: 0.875rem;
+	cursor: pointer;
 }
 
 .duration-btn.selected {
-  background-color: #9333ea;
-  color: white;
+	background-color: #9333ea;
+	color: white;
+}
+
+.link {
+	color: #0b69c7;
+	text-decoration: underline;
+	overflow: hidden;
+}
+.link:hover {
+	text-decoration: none;
 }
