--- a/src/renderer/components/event-card/card-body/event-details/style.scss
+++ b/src/renderer/components/event-card/card-body/event-details/style.scss
@@ -25,6 +25,7 @@
 	font-weight: 400;
 	font-size: 16px;
 	text-transform: capitalize;
+	margin-bottom: 8px;
 }
 
 .event-description {
@@ -60,4 +61,26 @@
 }
 .link:hover {
 	text-decoration: none;
+}
+
+.product-name {
+	font-size: 14px;
+	color: #666;
+	font-style: italic;
+}
+
+@keyframes pulse {
+	0% {
+		opacity: 0.6;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.6;
+	}
+}
+
+.detail-row p:has(+ .loading) {
+	animation: pulse 1.5s infinite ease-in-out;
 }
