--- a/src/renderer/components/event-card/card-body/questions/style.scss
+++ b/src/renderer/components/event-card/card-body/questions/style.scss
@@ -34,13 +34,12 @@
 
 .schedule-btn {
 	cursor: pointer;
-	color: #FFFFFF;
+	color: #ffffff;
 	font-weight: 400;
 	font-size: 14px;
 	border-radius: 100px;
 	border: none;
 	padding: 12px 24px;
-	background-color: #953AE4;
 }
 
 .schedule-btn:hover {
