feat: Enhance event color handling in Reschedule components and update button styles

--- a/src/client/pages/bookings/add-booking-modal/questions/style.scss
+++ b/src/client/pages/bookings/add-booking-modal/questions/style.scss
@@ -34,15 +34,10 @@
 
 .schedule-btn {
 	cursor: pointer;
-	color: #FFFFFF;
+	color: #ffffff;
 	font-weight: 400;
 	font-size: 14px;
 	border-radius: 100px;
 	border: none;
 	padding: 12px 24px;
-	background-color: #953AE4;
-}
-
-.schedule-btn:hover {
-	background-color: #7b1fa2;
 }
