--- a/src/renderer/components/event-card/card-body/date-time-picker/style.scss
+++ b/src/renderer/components/event-card/card-body/date-time-picker/style.scss
@@ -7,6 +7,7 @@
 	font-weight: 600;
 	font-size: 20px;
 	padding: 0;
+	padding-bottom: 15px;
 }
 
 .date-time-header {
@@ -19,6 +20,7 @@
 	font-size: 16px;
 	color: #000000;
 	margin-bottom: 5px;
+	padding-top: 15px;
 }
 
 .date-time-timezone-select {
